[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/Slimes/slime_idle1.png" type="Texture" id=1]
[ext_resource path="res://assets/Slimes/slime_move.png" type="Texture" id=2]
[ext_resource path="res://assets/Slimes/slime_hit.png" type="Texture" id=3]
[ext_resource path="res://assets/Slimes/slime_die.png" type="Texture" id=4]
[ext_resource path="res://inheritance-2/basic_slime/BasicSlime.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/16x16 RPG Item Pack/Item__16.png" type="Texture" id=6]
[ext_resource path="res://inheritance-2/vladlen/Vladlen.gd" type="Script" id=7]
[ext_resource path="res://assets/misc/arrowt.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=28]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 80, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 80, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 160, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 240, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 320, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 400, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 480, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 560, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 640, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 720, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 800, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 880, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 960, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 80, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 160, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 320, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 400, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 480, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 80, 72 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 72, 80, 72 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "take_damage",
"speed": 3.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=26]
radius = 200.0

[sub_resource type="CircleShape2D" id=27]
radius = 150.0

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("GFX/Weapon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GFX/Weapon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -9, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GFX/Weapon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 159.358, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GFX/Arrow:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GFX/Arrow:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("GFX/Arrow:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 14.5375, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("GFX/Arrow:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GFX/Body:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("GFX/Weapon:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("HpBar:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Label:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=30]
resource_name = "shot"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("GFX/Weapon:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("GFX/Weapon:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -9, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("GFX/Weapon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 159.358, -0.25, 0, 0.25, 0, 138.781, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("GFX/Arrow:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("GFX/Arrow:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("GFX/Arrow:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 14.5375, -0.25, 0, 0.25, 0, 0.138668, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("GFX/Arrow:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Vladlen" instance=ExtResource( 5 )]
script = ExtResource( 7 )
damage = 10.0
attack_period = 1.5
armor = 3.0

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="." index="0"]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 28 )

[node name="GFX" type="Node2D" parent="." index="1"]

[node name="Body" type="AnimatedSprite" parent="GFX" index="0"]
position = Vector2( 7, -12 )
frames = SubResource( 25 )
animation = "move"

[node name="Weapon" type="Sprite" parent="GFX" index="1"]
position = Vector2( 8, -9 )
rotation = 2.78132
texture = ExtResource( 6 )

[node name="Arrow" type="Sprite" parent="GFX" index="2"]
position = Vector2( 6, -4 )
rotation = 0.253727
texture = ExtResource( 8 )

[node name="Label" parent="." index="2"]
margin_left = -13.0
margin_right = 43.0
text = "Vladlen"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GuardArea" index="0"]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 26 )

[node name="AttackAreaCollisionShape" type="CollisionShape2D" parent="AttackArea" index="0"]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/RESET = SubResource( 29 )
anims/shot = SubResource( 30 )

[node name="Node" type="Node" parent="." index="6"]

[node name="DebugLine2D" type="Line2D" parent="Node" index="0"]
visible = false
width = 1.0
